--- a/leetcodetop150questions.ipynb
+++ b/leetcodetop150questions.ipynb
@@ -1882,6 +1882,159 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# Remove Duplicates from Sorted List II\n",
+    "\n",
+    "class LL:\n",
+    "    def __init__(self, data):\n",
+    "        self.d = data\n",
+    "        self.next = None\n",
+    "\n",
+    "def print_LL(head):\n",
+    "    temp = head\n",
+    "    while temp is not None:\n",
+    "        print(temp.d, end=\"-->\")\n",
+    "        temp = temp.next\n",
+    "    print()\n",
+    "\n",
+    "def deleteDuplicates(head):\n",
+    "    def get_unique_list(head):\n",
+    "        lst = []\n",
+    "        temp=head\n",
+    "        while temp!=None:\n",
+    "            lst.append(temp.d)\n",
+    "            temp=temp.next\n",
+    "        while lst\n",
+    "            \n",
+    "    lst = get_unique_list(head)\n",
+    "\n",
+    "\n",
+    "def take_ip():\n",
+    "    v = int(input(\"Enter a value: \"))\n",
+    "    head = None\n",
+    "    while v != -1:\n",
+    "        if head is None:\n",
+    "            head = LL(v)\n",
+    "        else:\n",
+    "            temp = head\n",
+    "            while temp.next is not None:\n",
+    "                temp = temp.next\n",
+    "            temp.next = LL(v)\n",
+    "        v = int(input())\n",
+    "    return head\n",
+    "\n",
+    "newHead = take_ip()\n",
+    "print(\"Original Linked List:\")\n",
+    "print_LL(newHead)\n",
+    "ans = deleteDuplicates(newHead)\n",
+    "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 2, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst = [1,1,1,2,3]\n",
+    "lst1=[]\n",
+    "for i in range(len(lst)-1,-1,-1):\n",
+    "    count =1\n",
+    "    for j in range(i+1,len(lst)):\n",
+    "        if lst[i]==lst[j]:\n",
+    "            count = count+1\n",
+    "    if count==1:\n",
+    "        lst1.append(lst[i])\n",
+    "print(lst1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Partition list\n",
+    "\n",
+    "class LL:\n",
+    "    def __init__(self, data):\n",
+    "        self.d = data\n",
+    "        self.next = None\n",
+    "\n",
+    "def print_LL(head):\n",
+    "    temp = head\n",
+    "    while temp is not None:\n",
+    "        print(temp.d, end=\"-->\")\n",
+    "        temp = temp.next\n",
+    "    print()\n",
+    "def partition(head,x):\n",
+    "    pass\n",
+    "def take_ip():\n",
+    "    v = int(input(\"Enter a value: \"))\n",
+    "    head = None\n",
+    "    while v != -1:\n",
+    "        if head is None:\n",
+    "            head = LL(v)\n",
+    "        else:\n",
+    "            temp = head\n",
+    "            while temp.next is not None:\n",
+    "                temp = temp.next\n",
+    "            temp.next = LL(v)\n",
+    "        v = int(input())\n",
+    "    return head\n",
+    "newHead = take_ip()\n",
+    "print(\"Original Linked List:\")\n",
+    "print_LL(newHead)\n",
+    "ans = partition(newHead,3)\n",
+    "print_LL(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Container With Most Water\n",
+    "\n",
+    "def maxArea(height):\n",
+    "    h_max1 = max(height)\n",
+    "    max1_id = height.index(h_max1)\n",
+    "    lst = [i for i in height if i!=h_max1]\n",
+    "    if not lst:\n",
+    "        return h_max1\n",
+    "    h_max2 = max(lst)\n",
+    "    max2_id = height.index(h_max2)\n",
+    "    width = abs(max1_id - max2_id)\n",
+    "    minimum = min(h_max1,h_max2)\n",
+    "    water_storing_capacity = width * minimum\n",
+    "    return water_storing_capacity\n",
+    "\n",
+    "ans = maxArea([4,3,2,1,4])\n",
+    "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
