--- a/stacks.ipynb
+++ b/stacks.ipynb
@@ -49,6 +49,79 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6-->5-->4-->3-->2-->1-->\n",
+      "6\n",
+      "Length =  6\n",
+      "Not empty\n",
+      "5-->4-->3-->2-->1-->\n",
+      "Length =  5\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Stack implemetation using linked list\n",
+    "\n",
+    "class Node:\n",
+    "    def __init__(self, data):\n",
+    "        self.d = data\n",
+    "        self.next = None\n",
+    "\n",
+    "class StackusingLinkedlist:\n",
+    "    def __init__(self):\n",
+    "        self.head = None\n",
+    "        self.size = 0\n",
+    "\n",
+    "    def print_Sll(self):\n",
+    "        temp = self.head\n",
+    "        while temp is not None:\n",
+    "            print(temp.d, end=\"-->\")\n",
+    "            temp = temp.next\n",
+    "        print()\n",
+    "    def push(self):\n",
+    "        d = int(input())\n",
+    "        count = 0\n",
+    "        while d != -1:\n",
+    "            count = count+1\n",
+    "            newNode = Node(d)\n",
+    "            if self.head is None:\n",
+    "                self.head = newNode\n",
+    "            else:\n",
+    "                newNode.next = self.head\n",
+    "                self.head = newNode\n",
+    "            d = int(input())\n",
+    "        self.size = count\n",
+    "    def length(self):\n",
+    "        print(\"Length = \",self.size)\n",
+    "    def is_empty(self):\n",
+    "        if self.size>0:\n",
+    "            print(\"Not empty\")\n",
+    "        else:\n",
+    "            print(\"Empty\")\n",
+    "    def pop(self):\n",
+    "        self.head = self.head.next\n",
+    "        self.size = self.size-1\n",
+    "    \n",
+    "\n",
+    "sll = StackusingLinkedlist()\n",
+    "sll.push()\n",
+    "sll.print_Sll()\n",
+    "print(sll.size)\n",
+    "sll.length()\n",
+    "sll.is_empty()\n",
+    "sll.pop()\n",
+    "sll.print_Sll()\n",
+    "sll.length()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
