--- a/queues.ipynb
+++ b/queues.ipynb
@@ -140,34 +140,162 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[5, 5, 2, 25]\n"
+      "5\n",
+      "None\n"
      ]
     }
    ],
    "source": [
-    "## Stacks and queue practice questions\n",
+    "## Stacks and queue practice questions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Valid parenthesis\n",
     "\n",
+    "def is_balanced(S):\n",
+    "    flower_open_count=0\n",
+    "    flower_close_count=0\n",
+    "    brace_open_count=0\n",
+    "    brace_close_count=0\n",
+    "    square_open_count=0\n",
+    "    square_close_count=0\n",
+    "    for i in S:\n",
+    "        if i=='{':\n",
+    "            flower_open_count=flower_open_count+1\n",
+    "        if i=='}':\n",
+    "            flower_close_count=flower_close_count+1\n",
+    "        if i=='(':\n",
+    "            brace_open_count=brace_open_count+1\n",
+    "        if i==')':\n",
+    "            brace_close_count=brace_close_count+1\n",
+    "        if i=='[':\n",
+    "            square_open_count=square_open_count+1\n",
+    "        if i==']':\n",
+    "            square_close_count=square_close_count+1\n",
+    "    if flower_open_count==flower_close_count and brace_open_count==brace_close_count and square_open_count==square_close_count:\n",
+    "        return True\n",
+    "    return False\n",
+    "\n",
+    "ans = is_balanced(\"(]\")\n",
+    "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 4, 4, -1]\n"
+     ]
+    }
+   ],
+   "source": [
     "# Next greater element\n",
     "\n",
     "def next_greater_element(a, n):\n",
-    "    lst=[]\n",
-    "    for i in range(len(a)-1):\n",
-    "        for j in range(i,len(a)):\n",
-    "            if a[j]>a[i]:\n",
-    "                lst.append(a[i+1])\n",
-    "                continue\n",
-    "    return lst\n",
+    "    f_lst=[]\n",
+    "    stack_lst=[-1]\n",
+    "    for i in range(n-1,-1,-1):\n",
+    "        while stack_lst[-1]!=-1 and a[i]>stack_lst[-1]:\n",
+    "            stack_lst.pop(-1)\n",
+    "        f_lst.append(stack_lst[-1])\n",
+    "        stack_lst.append(a[i])\n",
+    "    f_lst=f_lst[::-1]\n",
+    "    return f_lst\n",
+    "ans=next_greater_element([1, 3, 2, 4],4)\n",
+    "print(ans) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending initial stack elements : ['a']\n",
+      "After poping : ['a']\n",
+      "After poping : []\n",
+      "Appending initial stack elements : ['c']\n",
+      "['c', 'a']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Remove Consecutive Duplicates\n",
     "\n",
-    "ans = next_greater_element([4,5,2,25],4)\n",
-    "print(ans)\n",
-    "    "
+    "def removeDuplicates(s):\n",
+    "    stack=[]\n",
+    "    for i in s:\n",
+    "        if len(stack)==0:\n",
+    "            stack.append(i)\n",
+    "            print(\"Appending initial stack elements :\",stack)\n",
+    "        else:\n",
+    "            if i==stack[-1]:\n",
+    "                stack.pop(-1)\n",
+    "                print(\"After poping :\",stack)\n",
+    "            else:\n",
+    "                stack.append(i)\n",
+    "    return stack\n",
+    "\n",
+    "ans=removeDuplicates(\"abbaca\")\n",
+    "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ay\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Remove Consecutive Duplicates\n",
+    "\n",
+    "def removeDuplicates(s):\n",
+    "    stack=[]\n",
+    "    for i in s:\n",
+    "        if len(stack)==0 or i!=stack[-1]:\n",
+    "            stack.append(i)\n",
+    "        else:\n",
+    "            stack.pop(-1)\n",
+    "    stack=\"\".join(stack)\n",
+    "    return stack\n",
+    "\n",
+    "ans=removeDuplicates(\"azxxzy\")\n",
+    "print(ans)"
    ]
   },
   {
