--- a/queues.ipynb
+++ b/queues.ipynb
@@ -232,44 +232,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Appending initial stack elements : ['a']\n",
-      "After poping : ['a']\n",
-      "After poping : []\n",
-      "Appending initial stack elements : ['c']\n",
-      "['c', 'a']\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Remove Consecutive Duplicates\n",
-    "\n",
-    "def removeDuplicates(s):\n",
-    "    stack=[]\n",
-    "    for i in s:\n",
-    "        if len(stack)==0:\n",
-    "            stack.append(i)\n",
-    "            print(\"Appending initial stack elements :\",stack)\n",
-    "        else:\n",
-    "            if i==stack[-1]:\n",
-    "                stack.pop(-1)\n",
-    "                print(\"After poping :\",stack)\n",
-    "            else:\n",
-    "                stack.append(i)\n",
-    "    return stack\n",
-    "\n",
-    "ans=removeDuplicates(\"abbaca\")\n",
-    "print(ans)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [
@@ -296,6 +258,99 @@
     "\n",
     "ans=removeDuplicates(\"azxxzy\")\n",
     "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-1, 2, -1, -1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Next smaller element\n",
+    "\n",
+    "def next_smallest_element(a, n):\n",
+    "    f_lst=[]\n",
+    "    stack_lst=[-1]\n",
+    "    for i in range(n-1,-1,-1):\n",
+    "        while stack_lst[-1]!=-1 and a[i]<stack_lst[-1]:\n",
+    "            stack_lst.pop(-1)\n",
+    "        f_lst.append(stack_lst[-1])\n",
+    "        stack_lst.append(a[i])\n",
+    "    f_lst=f_lst[::-1]\n",
+    "    return f_lst\n",
+    "ans=next_smallest_element([1, 3, 2, 4],4)\n",
+    "print(ans) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['4', '13']\n",
+      "['4']\n",
+      "['4']\n",
+      "[]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Evaluate Postfix Expression\n",
+    "\n",
+    "def evaluate_postfix(expression):\n",
+    "    stack=[]\n",
+    "    for i in range(len(expression)):\n",
+    "        if expression[i] not in {\"+\",\"-\",\"/\",\"*\"}:\n",
+    "            stack.append(expression[i])\n",
+    "        else:\n",
+    "            n1=stack.pop(-1)\n",
+    "            n2=stack.pop(-1)\n",
+    "            stack.append(eval(f\"{int(n2)} {expression[i]} {int(n1)}\"))\n",
+    "    return stack[-1]\n",
+    "            \n",
+    "        \n",
+    "\n",
+    "evaluate_postfix([\"4\", \"13\", \"5\", \"/\", \"+\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "result=eval('4\"+\"5'.replace('\"',\"\"))\n",
+    "print(result)\n"
    ]
   },
   {
