--- a/queues.ipynb
+++ b/queues.ipynb
@@ -292,26 +292,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['4', '13']\n",
-      "['4']\n",
-      "['4']\n",
-      "[]\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "6"
+       "0"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,35 +313,71 @@
     "    stack=[]\n",
     "    for i in range(len(expression)):\n",
     "        if expression[i] not in {\"+\",\"-\",\"/\",\"*\"}:\n",
-    "            stack.append(expression[i])\n",
+    "            stack.append(int(expression[i]))\n",
     "        else:\n",
-    "            n1=stack.pop(-1)\n",
-    "            n2=stack.pop(-1)\n",
-    "            stack.append(eval(f\"{int(n2)} {expression[i]} {int(n1)}\"))\n",
-    "    return stack[-1]\n",
-    "            \n",
-    "        \n",
+    "            n1 = stack.pop()\n",
+    "            n2 = stack.pop()\n",
+    "            if expression[i] == \"/\" and int(n1) == 0:\n",
+    "                stack.append(0)\n",
+    "            else:\n",
+    "                stack.append(int(eval(f\"{int(n2)} {expression[i]} {int(n1)}\")))\n",
+    "    return stack[-1]        \n",
     "\n",
-    "evaluate_postfix([\"4\", \"13\", \"5\", \"/\", \"+\"])"
+    "evaluate_postfix([\"0\",\"3\",\"/\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9\n"
+      "4\n"
      ]
     }
    ],
    "source": [
-    "result=eval('4\"+\"5'.replace('\"',\"\"))\n",
-    "print(result)\n"
+    "## Winner of the circular game\n",
+    "\n",
+    "def find_winner(n, k):\n",
+    "    lst=[i+1 for i in range(n)]\n",
+    "    count=0\n",
+    "    index=0\n",
+    "    while len(lst)!=1:\n",
+    "        for j in range(1,len(lst)):\n",
+    "            count=count+1\n",
+    "            if count==k:\n",
+    "                lst.pop(index)\n",
+    "                count=0\n",
+    "                index=index-1\n",
+    "            index=(index+1)%len(lst)\n",
+    "    return lst[0]\n",
+    "            \n",
+    "\n",
+    "ans=find_winner(5,3)\n",
+    "print(ans)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
