--- a/leetcodetop150questions.ipynb
+++ b/leetcodetop150questions.ipynb
@@ -1879,9 +1879,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original Linked List:\n",
+      "2-->-3-->\n",
+      "-3-->2-->\n"
+     ]
+    }
+   ],
    "source": [
     "# Remove Duplicates from Sorted List II\n",
     "\n",
@@ -1904,10 +1914,29 @@
     "        while temp!=None:\n",
     "            lst.append(temp.d)\n",
     "            temp=temp.next\n",
-    "        while lst\n",
+    "        st1=list(set(lst))\n",
+    "        count=0\n",
+    "        for i in range(len(st1)-1,-1,-1):\n",
+    "            for j in range(len(lst)-1,-1,-1):\n",
+    "                if st1[i]==lst[j]:\n",
+    "                    count = count+1\n",
+    "            if count>1:\n",
+    "                st1.remove(st1[i])\n",
+    "            count=0\n",
+    "            \n",
+    "        return sorted(st1)\n",
     "            \n",
     "    lst = get_unique_list(head)\n",
-    "\n",
+    "    def create_llist(lst):\n",
+    "        dummy = LL(0)\n",
+    "        tail=dummy\n",
+    "        for i in lst:\n",
+    "            newNode=LL(i)\n",
+    "            tail.next = newNode\n",
+    "            tail=tail.next\n",
+    "        return dummy.next\n",
+    "    ll = create_llist(lst)\n",
+    "    return ll\n",
     "\n",
     "def take_ip():\n",
     "    v = int(input(\"Enter a value: \"))\n",
@@ -1927,7 +1956,7 @@
     "print(\"Original Linked List:\")\n",
     "print_LL(newHead)\n",
     "ans = deleteDuplicates(newHead)\n",
-    "print(ans)"
+    "print_LL(ans)"
    ]
   },
   {
@@ -2027,6 +2056,107 @@
     "    return water_storing_capacity\n",
     "\n",
     "ans = maxArea([4,3,2,1,4])\n",
+    "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n",
+      "<class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[1,2,3]\n",
+    "st=set(l)\n",
+    "lst=list(st)\n",
+    "print(lst)\n",
+    "print(type(lst))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Merge Nodes in Between Zeros\n",
+    "class LL:\n",
+    "    def __init__(self, data):\n",
+    "        self.d = data\n",
+    "        self.next = None\n",
+    "\n",
+    "def print_LL(head):\n",
+    "    temp = head\n",
+    "    while temp is not None:\n",
+    "        print(temp.d, end=\"-->\")\n",
+    "        temp = temp.next\n",
+    "    print()\n",
+    "def mergeNodes(head):\n",
+    "    temp=head\n",
+    "def take_ip():\n",
+    "    v = int(input(\"Enter a value: \"))\n",
+    "    head = None\n",
+    "    while v != -1:\n",
+    "        if head is None:\n",
+    "            head = LL(v)\n",
+    "        else:\n",
+    "            temp = head\n",
+    "            while temp.next is not None:\n",
+    "                temp = temp.next\n",
+    "            temp.next = LL(v)\n",
+    "        v = int(input())\n",
+    "    return head\n",
+    "newHead = take_ip()\n",
+    "print(\"Original Linked List:\")\n",
+    "print_LL(newHead)\n",
+    "ans = mergeNodes(newHead)\n",
+    "print_LL(ans)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "def isValid(s):\n",
+    "    stack=[]\n",
+    "    for i in s:\n",
+    "        if i==\"(\" or i ==\"[\" or i ==\"{\":\n",
+    "            stack.append(i)\n",
+    "        else:\n",
+    "            if(len(stack)==0):\n",
+    "                return False\n",
+    "            elif(i==\")\" and stack[-1]==\"(\"):\n",
+    "                stack.pop(-1)\n",
+    "            elif(i==\"]\" and stack[-1]==\"[\"):\n",
+    "                stack.pop(-1)\n",
+    "            elif(i==\"}\" and stack[-1]==\"{\"):\n",
+    "                stack.pop(-1)\n",
+    "            else:\n",
+    "                stack.append(i)\n",
+    "    if len(stack)==0:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
+    "ans = isValid(\"(({}}))\")\n",
     "print(ans)"
    ]
   },
