--- a/generictrees.ipynb
+++ b/generictrees.ipynb
@@ -10,11 +10,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "2\n",
-      "4\n",
-      "5\n",
-      "3\n"
+      "1:2,3,\n",
+      "2:4,\n",
+      "4:5,\n",
+      "5:\n",
+      "3:\n"
      ]
     }
    ],
@@ -38,13 +38,21 @@
     "c1.child.append(c3)\n",
     "c3.child.append(c4)\n",
     "\n",
-    "def print_generic_tree(root):\n",
-    "    print(root.data)\n",
+    "def print_tree_detailed(root):\n",
+    "    if(root==None): # Edge Case\n",
+    "        return\n",
+    "    \n",
+    "    print(f\"{root.data}:\",end = \"\")\n",
     "\n",
-    "    for i in root.child:\n",
-    "        print_generic_tree(i)\n",
+    "    for eachChild in root.child:\n",
+    "        print(eachChild.data,end = \",\")\n",
     "\n",
-    "print_generic_tree(root)"
+    "    print()\n",
+    "\n",
+    "    for eachChild in root.child:\n",
+    "        print_tree_detailed(eachChild)\n",
+    "\n",
+    "print_tree_detailed(root)"
    ]
   },
   {
