--- a/generictrees.ipynb
+++ b/generictrees.ipynb
@@ -57,8 +57,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "ba6b7ad3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Tree Structure:\n",
+      "1: 3 4 \n",
+      "3: 6 \n",
+      "6: \n",
+      "4: 10 \n",
+      "10: \n"
+     ]
+    }
+   ],
+   "source": [
+    "## Taking input recurrsively for geneirc trees\n",
+    "from collections import deque\n",
+    "class TreeNode:\n",
+    "    def __init__(self,data):\n",
+    "        self.data = data\n",
+    "        self.child = []\n",
+    "def take_input():\n",
+    "    root_data = int(input(\"Enter root data : \"))\n",
+    "    root = TreeNode(root_data)\n",
+    "\n",
+    "    queue  = deque([root])\n",
+    "\n",
+    "    while len(queue)!=0:\n",
+    "        current_node = queue.popleft()\n",
+    "        num_of_childrens  = int(input(f\"Enter no of childrens for {current_node.data} : \"))\n",
+    "\n",
+    "        for i in range(num_of_childrens):\n",
+    "            child_data = int(input(f\"Enter data for {i+1} child of {current_node.data} :\"))\n",
+    "            child_node = TreeNode(child_data)\n",
+    "            current_node.child.append(child_node)\n",
+    "            queue.append(child_node)\n",
+    "    return root\n",
+    "def print_tree(root):\n",
+    "    if root is None:\n",
+    "        return\n",
+    "    print(f\"{root.data}:\", end=\" \")\n",
+    "    for child in root.child:\n",
+    "        print(child.data, end=\" \")\n",
+    "    print()\n",
+    "    for child in root.child:\n",
+    "        print_tree(child)\n",
+    "\n",
+    "root = take_input()\n",
+    "print(\"\\nTree Structure:\")\n",
+    "print_tree(root)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71274280",
    "metadata": {},
    "outputs": [],
    "source": []
