--- a/generictrees.ipynb
+++ b/generictrees.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "id": "ba6b7ad3",
    "metadata": {},
    "outputs": [
@@ -67,11 +67,12 @@
      "text": [
       "\n",
       "Tree Structure:\n",
-      "1: 3 4 \n",
-      "3: 6 \n",
+      "1: 2 3 4 \n",
+      "2: 5 6 \n",
+      "5: \n",
       "6: \n",
-      "4: 10 \n",
-      "10: \n"
+      "3: \n",
+      "4: \n"
      ]
     }
    ],
@@ -115,8 +116,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "71274280",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Counting no of nodes in a generic tree\n",
+    "\n",
+    "def count_nodes(root):\n",
+    "    if root==0:\n",
+    "        return 0\n",
+    "    count =1\n",
+    "    for i in root.child:\n",
+    "        count=count+count_nodes(i)\n",
+    "    return count\n",
+    "\n",
+    "count_nodes(root)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "90f603d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "21"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## SUm of nodes\n",
+    "\n",
+    "def sum_of_nodes(root):\n",
+    "    if root==0:\n",
+    "        return 0\n",
+    "    sum =root.data\n",
+    "    for i in root.child:\n",
+    "        sum=sum+sum_of_nodes(i)\n",
+    "    return sum\n",
+    "\n",
+    "sum_of_nodes(root)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d27bffa",
    "metadata": {},
    "outputs": [],
    "source": []
